2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Matthias Clasen
	<mclasen@redhat.com> to match Type1 fonts higher than Postscript files
	(Closes: #4675)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add magic for audio/ac3 (Closes: #6509)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add audio/x-ape mime-type for
	Monkey's audio (Closes: #6747)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: remove po/stamp-it on "make clean" (Closes: #6485)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: remove the wide *.dat glob from matching
	MPEG videos (Closes: #2788)

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add text/x-txt2tags to the mime-type
	so that we can whitelist it (not a Postscript!) (Closes: #2001),
	lower the priority of the application/mbox magic to avoid false
	positives

2006-07-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/mbox for the MBOX mailboxes
	(Closes: #2052)

2006-07-03  Christian Neumair  <chris@gnome-de.org>

	* po/Makefile.in.in: Remove from CVS. Fixes #7255.
	Thanks to Christian Persch <chpe@gnome.org>.

2006-07-03  Christian Neumair  <chris@gnome-de.org>

	* fredesktop.org.xml.in: Add VHDL MIME type. Fixes #7329.
	Thanks to George Jenkins <gvj11@student.canterbury.ac.nz>.

2006-07-03  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add application/powerpoint and
	application/mspowerpoint as PPT alias. Fixes #7407.
	Thanks to Frederic Crozat <fcrozat@mandriva.com>.

=== shared-mime-info 0.18 ===

2006-07-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.18

2006-06-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: *.mpga is also a pattern for MP3
	(Closes GNOME #345306)

2006-05-14  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd
