@@ -101,13 +101,6 @@ command to generate the output files.
   </mime-type>
   <mime-type type="application/octet-stream">
     <_comment>unknown</_comment>
-    <magic priority="50">
-      <match type="string" value="\037\036" offset="0"/>
-      <match type="host16" value="017437" offset="0"/>
-      <match type="host16" value="0x1fff" offset="0"/>
-      <match type="string" value="\377\037" offset="0"/>
-      <match type="host16" value="0145405" offset="0"/>
-    </magic>
     <glob pattern="*.bin"/>
   </mime-type>
   <mime-type type="application/oda">
